# inc-powerlaw

./: .gitmodules  CMakeLists.txt  README.md
automated-build-and-benchmark/: build  build_and_run_benchmarks  run_arl  run_benchmarks  run_benchmarks_d-min_parallel  run_benchmarks_gamma  run_benchmarks_mcmc  run_benchmarks_parallel
automated-build-and-benchmark/results/: dep_g_287  dep_g_288  dep_g_290  dep_g_295  dep_g_300  dep_g_350  dep_g_400  dep_min-d_2  dep_min-d_3  dep_n  mcmc_dep_n  parallel_inter_1  parallel_inter_10  parallel_inter_11  parallel_inter_12  parallel_inter_5  parallel_inter_6  parallel_inter_7  parallel_inter_8  parallel_inter_9  parallel_intra_1  parallel_intra_10  parallel_intra_11  parallel_intra_12  parallel_intra_3  parallel_intra_5  parallel_intra_6  parallel_intra_7  parallel_intra_8  parallel_intra_9  parallel_min-d_2_inter_1  parallel_min-d_2_inter_10  parallel_min-d_2_inter_11  parallel_min-d_2_inter_12  parallel_min-d_2_inter_13  parallel_min-d_2_inter_14  parallel_min-d_2_inter_15  parallel_min-d_2_inter_16  parallel_min-d_2_inter_17  parallel_min-d_2_inter_18  (+55 more)
benchmark/: BenchmarkIncPowerlawGraphSampler.cpp  CMakeLists.txt  edge_switching.py
extlibs/shuffle/include/shuffle/algorithms/: InplaceScatterShuffle.hpp
extlibs/ska_sort/include/: ska_sort.hpp
include/incpwl/: AdjacencyVector.cpp  AdjacencyVector.hpp  ConfigurationModel.cpp  ConfigurationModel.hpp  DegreeSequenceHelper.cpp  DegreeSequenceHelper.hpp  IncPowerlawGraphSampler.cpp  IncPowerlawGraphSampler.hpp  PowerlawDegreeSequence.cpp  PowerlawDegreeSequence.hpp  ScopedTimer.hpp  defs.hpp
src/: generator_main.cpp
test/: CMakeLists.txt  TestAdjacencyVector.cpp  TestIncPowerlawGraphSampler.cpp  TestRegression.cpp
